--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.9",
     "expo-av": "~13.2.1",
+    "expo-file-system": "~15.2.2",
     "expo-haptics": "~12.2.1",
+    "expo-sharing": "~11.2.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.4",
@@ -22,6 +24,7 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-svg": "13.4.0",
+    "react-query": "^3.39.3",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
