--- a/package.json
+++ b/package.json
@@ -12,21 +12,26 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@shopify/react-native-skia": "0.1.172",
     "expo": "~48.0.9",
     "expo-av": "~13.2.1",
     "expo-file-system": "~15.2.2",
     "expo-haptics": "~12.2.1",
     "expo-sharing": "~11.2.2",
     "expo-status-bar": "~1.4.4",
+    "lottie-react-native": "5.1.4",
     "react": "18.2.0",
     "react-native": "0.71.4",
+    "react-native-awesome-slider": "^2.3.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-svg": "13.4.0",
     "react-query": "^3.39.3",
     "recoil": "^0.7.7",
-    "@shopify/react-native-skia": "0.1.172"
+    "@react-native-picker/picker": "2.4.8",
+    "expo-clipboard": "~4.1.2",
+    "react-native-shared-element": "0.8.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
